feat: Refatoração completa para MongoDB com estrutura aninhada
- Implementa estrutura de menu aninhada no documento Restaurant
- Adiciona suporte a UUID para todos os identificadores
- Cria endpoints otimizados para diferentes necessidades:
  * GET /restaurants - dados básicos sem menu
  * GET /restaurants/full - dados completos com menu
  * GET /restaurants/menu/item/{itemId} - item específico com contexto
- Refatora entidades para estrutura NoSQL otimizada
- Adiciona testes unitários completos
- Atualiza documentação e exemplos
- Cria scripts de exemplo e coleção Postman atualizada
- Configura conversores UUID para MongoDB
- Remove dependências de estrutura relacional